--- a/drivers/CMakeLists.txt
+++ b/drivers/CMakeLists.txt
@@ -2,4 +2,4 @@ add_subdirectory(ir)
 add_subdirectory(led)
 add_subdirectory(lna)
 add_subdirectory(power)
-add_subdirectory(touch)
+# add_subdirectory(touch)
