--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,10 +5,8 @@ tasks:
       sudo apt install cmake gcc-arm-none-eabi libnewlib-arm-none-eabi build-essential -y &&
       export PICO_SDK_FETCH_FROM_GIT=true &&
       mkdir --parent ./build &&
-      cd build/ &&
-      cmake .. &&
-      cmake --build . &&
-      cd ..
+      cmake -S . -B ./build &&
+      cmake --build ./build
 
 github:
   prebuilds:
