--- a/utils/pubsub/CMakeLists.txt
+++ b/utils/pubsub/CMakeLists.txt
@@ -1,11 +1,11 @@
-set(DRIVER_NAME touch)
+set(DRIVER_NAME pubsub)
 add_library(${DRIVER_NAME} INTERFACE)
 
 target_sources(${DRIVER_NAME} INTERFACE
-  ${CMAKE_CURRENT_LIST_DIR}/src/${DRIVER_NAME}.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/src/publisher.cpp
 )
 
 target_include_directories(${DRIVER_NAME} INTERFACE ${CMAKE_CURRENT_LIST_DIR}/include)
 
 # Pull in pico libraries that we need
-target_link_libraries(${DRIVER_NAME} INTERFACE pico_stdlib hardware_gpio hardware_i2c pubsub)
+target_link_libraries(${DRIVER_NAME} INTERFACE pico_stdlib)
